--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,7 @@ set-option -g status-right '%Y-%m-%d(%a) %H:%M'
 
 # ~/.bashrcをsourceするため
 set-option -g default-shell "/bin/bash"
+
+# source .bash_profile
+# https://qiita.com/ono_matope/items/feebac51afb346d9db0e
+set -g default-command "${SHELL}"
