fix: delta (git diff)追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set-option -g window-style 'bg=#444444'
 # アクティブなペインの背景を黒色にする
 set-option -g window-active-style 'bg=#222222'
 
-# 現在時刻を画面下部にあるステータスラインの右側に表示
+# 現在時刻を画面下部にあるステータスラインの右側に表示(下記へ移動)
 set-option -g status-right '%Y-%m-%d(%a) %H:%M'
 
 # ~/.bashrcをsourceするため
@@ -32,3 +32,5 @@ set-option -g default-shell "/bin/bash"
 # source .bash_profile
 # https://qiita.com/ono_matope/items/feebac51afb346d9db0e
 set -g default-command "${SHELL}"
+
+
