--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -21,5 +21,6 @@
   "[go]": {
     "editor.defaultFormatter": "golang.go",
     "editor.formatOnSave": true
-  }
+  },
+  "editor.unicodeHighlight.nonBasicASCII": false,
 }
