--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -3,12 +3,12 @@ font:
     normal:
         family: DroidSansM Nerd Font
         style: Regular
-    bold:
-        family: DroidSansM Nerd Font
-        style: Bold
-    italic:
-        family: DroidSansM Nerd Font
-        style: Italic
+    # bold:
+    #     family: DroidSansM Nerd Font
+    #     style: Bold
+    # italic:
+    #     family: DroidSansM Nerd Font
+    #     style: Italic
 window:
     dimensions:
         columns: 120
