--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,7 +23,7 @@ jobs:
       run: |
         # Your shell script content goes here
         /bin/bash -c '
-          shell_file_list=("~/.bash_aliases" "~/.bashrc")
+          shell_file_list=(".bash_aliases" ".bashrc")
 
           while IFS= read -r line; do
             src_file=$(echo "$line" | awk '\''{print $3}'\'')
@@ -35,11 +35,11 @@ jobs:
             echo "check $src_file"
 
             src_path="${src_file/#\~/$HOME}"
-            if [ -e $src_path ]; then
+            if [[ -e $src_path ]]; then
               
               # 予め定義しておいたshellscriptファイル
               # ~/.bash_aliasesは実行形式でもないしshebangもないためshellファイルであるかの判定が難しいため手動定義
-              if [[ "${shell_file_list[@]}" =~ "$src_file" ]];then
+              if [[ "${shell_file_list[@]}" =~ $(basename "$src_file") ]];then
                 shellcheck "$src_path"
               fi
 
