fix: some refs in git-rank

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,4 +33,6 @@ set-option -g default-shell "/bin/bash"
 # https://qiita.com/ono_matope/items/feebac51afb346d9db0e
 set -g default-command "${SHELL}"
 
-
+# https://github.com/thoughtbot/dotfiles/blob/main/tmux.conf
+set -g status-style bg='#666666',fg='#aaaaaa'
+set -g history-limit 10000
