fix: show hidden files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,5 +34,5 @@ set-option -g default-shell "/bin/bash"
 set -g default-command "${SHELL}"
 
 # https://github.com/thoughtbot/dotfiles/blob/main/tmux.conf
-set -g status-style bg='#666666',fg='#aaaaaa'
-set -g history-limit 10000
+# set -g status-style bg='#666666',fg='#aaaaaa'
+# set -g history-limit 10000
