fix: tmux true color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,10 @@ set -g default-command "${SHELL}"
 # https://github.com/thoughtbot/dotfiles/blob/main/tmux.conf
 # set -g status-style bg='#666666',fg='#aaaaaa'
 # set -g history-limit 10000
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",*256col*:Tc"
+
+# https://qiita.com/tetzng/items/0fa27275255069142c32
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
