--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,3 +43,6 @@ set -ag terminal-overrides ",*256col*:Tc"
 # https://qiita.com/tetzng/items/0fa27275255069142c32
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# history
+set-option -g history-file ~/.bash_history
+set-option -g set-clipboard on
