--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,9 +19,11 @@ set-option -g mouse on
 
 # 非アクティブなペインの背景色を灰色にする
 set-option -g window-style 'bg=#444444'
+# set-option -g window-style 'bg=default'
 
 # アクティブなペインの背景を黒色にする
 set-option -g window-active-style 'bg=#222222'
+# set-option -g window-active-style 'bg=default'
 
 # 現在時刻を画面下部にあるステータスラインの右側に表示(下記へ移動)
 set-option -g status-right '%Y-%m-%d(%a) %H:%M'
