Update delta configuration in .gitconfig
Commented out a feature for delta configuration.

--- a/.config/.gitconfig
+++ b/.config/.gitconfig
@@ -27,6 +27,7 @@
     features = my-delta-config
 
 [delta "my-delta-config"]
+    # features = mantis-shrimp  # mac laptop
     side-by-side = true
     # line-numbers = true
     # features = woolly-mammoth
